# libraw-rs

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: backend.yml
examples/: dcraw_half.rs
exif/: libread.cpp
includes/: libraw.h
libraw-rs/: Cargo.toml  LICENSE  build.rs
libraw-rs/examples/: extract_thumbnail.rs
libraw-rs/exif/: libread.cpp
libraw-rs/includes/: libraw_internal.h  libraw_types.h
libraw-rs/src/: dcraw.rs  error.rs  exif.rs  lib.rs  progress.rs  traits.rs
libraw-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libraw-sys/.github/workflows/: backend.yml
libraw-sys/src/: lib.rs  linux.rs  macos.rs  windows.rs  windows_gnu.rs
libraw_r/: Cargo.toml  README.md
libraw_r/examples/: dcraw_half.rs  extract_thumbnail.rs  thumblist.rs
libraw_r/exif/: libread.cpp
libraw_r/src/: callback.rs  data_type.rs  dcraw.rs  error.rs  exif.rs  extra.rs  io.rs  lib.rs  libread.rs  progress.rs  thumbnail.rs
src/: dcraw.rs  defaults.rs  error.rs  exif.rs  jpeg.rs  lib.rs  traits.rs
tests/: Cargo.toml  justfile  progress.rs
tests/benches/: libraw.rs  post_process.rs
tests/src/: exif.rs  lib.rs  progress.rs
