[package]
name = "libraw_r"
version = "0.3.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24" , optional = true }
img-parts = { version = "0.2", optional = true }
libraw-sys = { git = "https://github.com/aftershootco/libraw-sys" }
semver = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
log = "0.4.16"
widestring = "0.5.1"

[features]
jpeg = ["dep:image", "dep:img-parts"]
build = ["libraw-sys/build"]
bindgen = ["libraw-sys/bindgen"]
default = []
