[package]
name = "libraw_r"
version = "0.5.1"
edition = "2021"
license = "MIT"
rust-version = "1.65"
publish = ["ktra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24" , optional = true }
img-parts = { version = "0.3.0", optional = true }
libc = { version = "0.2.135", optional = true }
libraw-sys = { version = "0.7.0", registry = "ktra" }
semver = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
log = "0.4.16"
widestring = "0.5.1"

[features]
jpeg = ["dep:image", "dep:img-parts"]
build = ["libraw-sys/build"]
no-build = ["libraw-sys/no-build"]
bindgen = ["libraw-sys/bindgen"]
file = []
default = ["build","file","exif"]
exif = ["dep:libc"]

[build-dependencies]
anyhow = "1.0.58"
cc = "1.0.73"

[dev-dependencies]
anyhow = "1.0.58"
