[package]
name = "libraw_r"
version = "0.8.3"
edition = "2021"
license = "MIT"
rust-version = "1.65"
description = "High level api over libraw-sys"
repository = "https://github.com/aftershootco/libraw-sys"
homepage = "https://github.com/aftershootco/libraw-sys"
publish = ["ktra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24" , optional = true }
img-parts = { version = "0.3.0", optional = true }
libc = { version = "0.2.135", optional = true }
libraw-sys = { version = "0.8", path = "../libraw-sys",  registry = "ktra" }
semver = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
log = "0.4.16"
widestring = "1.0.2"

[features]
jpeg = ["dep:image", "dep:img-parts"]
build = ["libraw-sys/build"]
no-build = ["libraw-sys/no-build"]
bindgen = ["libraw-sys/bindgen"]
default = ["build", "exif"]
exif = ["dep:libc"]

[build-dependencies]
anyhow = "1.0.58"
cc = "1.0.73"

[dev-dependencies]
anyhow = "1.0.58"
