[package]
name = "libraw_r"
version = "0.8.9"
edition = "2021"
license = "LGPL-2.1-or-later or CDDL-1.0"
rust-version = "1.65"
description = "High level api over libraw-sys"
repository = "https://github.com/aftershootco/libraw-sys"
homepage = "https://github.com/aftershootco/libraw-sys"
publish = ["ktra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", optional = true }
image = { version = "0.24" , optional = true }
img-parts = { version = "0.3.0", optional = true }
libc = { version = "0.2.135", optional = true }
libraw-sys = { version = "0.8", path = "../libraw-sys",  registry = "ktra" }
semver = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"

[features]
jpeg = ["dep:image", "dep:img-parts"]
bindgen = ["libraw-sys/bindgen"]
exif = ["dep:libc"]
openmp = ["libraw-sys/openmp"]
openmp_static = ["libraw-sys/openmp_static"]
default = ["exif"]

[build-dependencies]
anyhow = "1.0.58"
cc = "1.0.73"

[dev-dependencies]
anyhow = "1.0.58"
