[package]
name = "libraw-sys"
version = "0.8.9"
edition = "2021"
license = "MIT"
build = "build.rs"
publish = ["ktra"]
homepage = "https://github.com/aftershootco/libraw-sys"
repository = "https://github.com/aftershootco/libraw-sys"
description = "Bindings to the c api for libraw"
links = "raw_r"

[dependencies]
libc = "0.2.123"
libz-sys = { version = "1.1.8", optional = true, features = ["static"], default-features = false }
mozjpeg-sys = { version = "1.0", optional = true,  features = ["jpeg80_abi"], registry = "ktra" }

[build-dependencies]
bindgen = { version = "0.64.0", optional = true }
pkg-config = "0.3.26"
cc = { version = "1.0.73", optional = true, features = ["parallel"]}
shellexpand = "3.0.0"
fs_extra = "1.3.0"

[features]
default = ["build", "bindgen"]
clone = []
bindgen = ["dep:bindgen", "clone"]
build = ["jpeg", "dep:cc", "clone", "zlib"]
no-build = []
copy = []
zlib = ["dep:libz-sys"]
jpeg = ["dep:mozjpeg-sys"]
