[package]
name = "libraw-sys"
version = "0.8.9"
edition = "2021"
license = "LGPL-2.1-or-later or CDDL-1.0"
build = "build.rs"
publish = ["ktra"]
homepage = "https://github.com/aftershootco/libraw-sys"
repository = "https://github.com/aftershootco/libraw-sys"
description = "Bindings to the c api for libraw"
include = ["/src/*.rs", "/vendor/src/**", "/vendor/internal/**", "/vendor/libraw/**", "/Cargo.toml", "/README.md", "/vendor/README.md", "/vendor/LICENSE.CDDL", "/vendor/LICENSE.LGPL", "/build.rs" ]
links = "raw_r"

[dependencies]
libc = "0.2.123"
libz-sys = { version = "1.1.8", optional = true, features = ["static"], default-features = false }
# We want to switch out to libjpeg-turbo but currently the build system depends cmake and doesn't build on windows for some reason
mozjpeg-sys = { version = "1.0", optional = true,  features = ["jpeg80_abi"], registry = "ktra" }

[build-dependencies]
bindgen = { version = "0.64.0", optional = true }
pkg-config = "0.3.26"
cc = { version = "1.0.73", features = ["parallel"]}
shellexpand = "3.0.0"
fs_extra = "1.3.0"
dunce = "1.0.3"

[features]
default = ["jpeg","zlib", "bindgen"]
bindgen = ["dep:bindgen"]
copy = []
zlib = ["dep:libz-sys"]
jpeg = ["dep:mozjpeg-sys"]
