[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# libraw_r = { path = "../libraw-rs/" }
libraw_r = { path = "../libraw-rs/" }

[dev-dependencies]
libraw_r = { features = ["openmp_static"], path = "../libraw-rs/" }
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "post_process"
harness = false
